Apoli: Missing fixes from previous commit.